--- a/index.html
+++ b/index.html
@@ -9,4 +9,12 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    *{
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      text-decoration: none;
+    }
+  </style>
 </html>
