--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       margin: 0;
       list-style: none;
       text-decoration: none;
+      box-sizing: border-box;
     }
   </style>
 </html>
